--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: configure SSH service
+- name: configure sshd
   lineinfile:
     dest: /etc/ssh/sshd_config
     line: GatewayPorts clientspecified
   notify:
-    - restart SSH service
+    - restart sshd
 - name: open firewall ports
   firewalld:
     port: 12200-12209/tcp
