--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,10 +6,16 @@
   notify:
     - restart sshd
   become: yes
+- name: check if firewalld is running
+  command: systemctl status firewalld
+  register: firewalld_status
+  changed_when: false
+  failed_when: firewalld_status.rc > 4
 - name: open firewall ports
   firewalld:
     port: 12200-12209/tcp
     state: enabled
     permanent: yes
     immediate: yes
+  when: firewalld_status.rc == 0
   become: yes
