Add role to Ansible Galaxy

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: Jakub Gorczyca
+  role_name: ssh_tunnel_server
   description: >-
     Ansible role for setting up SSH tunnel between two CentOS 7 machines (server
     side). Uses autossh and systemd for persistance.
